fix(layout): avoid column-breaks in index

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -524,6 +524,7 @@ pre {
     }
 
     li {
+      break-inside: avoid-column;
       margin: 0 0 0.5rem;
     }
   }
